# TravelPlanner

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  priceservice.cpp  priceservice.h  trip.cpp  trip.h  tripmanager.cpp  tripmanager.h
.github/workflows/: qt-ci.yml
Travel/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
TravelTests/: CMakeLists.txt  tst_traveltests.cpp
TravelTests/TravelTests/: CMakeLists.txt  tst_traveltests.cpp
